--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,4 +25,6 @@
     <string name="confirm_delete_message">Are you sure you want to delete this gas station?</string>
     <string name="confirm_yes">Yes</string>
     <string name="confirm_no">No</string>
+    <string name="title_new_station">New Station</string>
+    <string name="title_edit_station">Edit Station</string>
 </resources>
